# cTTP

./: CMakeLists.txt  README.md  build-and-run.sh  run_test.sh
conf/: config_spectre_log.yaml  test.conf  test.yaml  test_group.conf  test_nested.conf
include/: parser.h
src/: CMakeLists.txt  main.cpp  main.h
src/anna_parser/: CMakeLists.txt  anna_parser.cpp  anna_parser.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h  pseudocode.txt
test/: CMakeLists.txt  main.cpp
test/src/: anna_parser_tests.cpp  anna_parser_tests.h  parser_tests.cpp  parser_tests.h  test.cpp  test.h  utils.cpp  utils.h
